--- a/GPL/HostIsolation/TcFilter/Makefile
+++ b/GPL/HostIsolation/TcFilter/Makefile
@@ -1,8 +1,8 @@
 
-TcFilter.o: TcFilter.c $(wildcard %.h)
-	clang -g -O2 -I../../../contrib/kernel_hdrs -emit-llvm -c TcFilter.c -o - | llc -march=bpf -mcpu=v2 -filetype=obj -o TcFilter.o
+TcFilter.bpf.o: TcFilter.bpf.c $(wildcard %.h)
+	clang -g -O2 -I../../../contrib/kernel_hdrs -emit-llvm -c TcFilter.bpf.c -o - | llc -march=bpf -mcpu=v2 -filetype=obj -o TcFilter.bpf.o
 
 .PHONY: clean
 clean:
-	rm TcFilter.o
+	rm TcFilter.bpf.o
 
