Move loader code to non-GPL dir. GPL folder is for BPF code only.
Update the Makefile to refer to the BPF source under GPL directory.

--- a/non-GPL/HostIsolation/KprobeConnectHook/Makefile
+++ b/non-GPL/HostIsolation/KprobeConnectHook/Makefile
@@ -1,5 +1,6 @@
 # SPDX-License-Identifier: (LGPL-2.1 OR BSD-2-Clause)
 LIBBPF_OUTPUT := $(abspath ../../../contrib/libbpf/build)
+BPF_SRC_PATH := $(abspath ../../../GPL/HostIsolation/KprobeConnectHook)
 APP_OUTPUT := build
 CLANG ?= clang
 LIBBPF_SRC := $(abspath ../../../contrib/libbpf/src)
@@ -33,7 +34,7 @@ $(APP_OUTPUT)/%.o: %.c $(LIBBPF_OBJ) $(wildcard %.h) | $(APP_OUTPUT)
 	$(call msg,CC,$@)
 	$(CC) $(CFLAGS) $(INCLUDES) -c $(filter %.c,$^) -o $@
 
-$(APP_OUTPUT)/%.bpf.o: %.bpf.c $(LIBBPF_OBJ) $(wildcard %.h) | $(APP_OUTPUT)
+$(APP_OUTPUT)/$(APP).bpf.o: $(BPF_SRC_PATH)/$(APP).bpf.c $(LIBBPF_OBJ) $(wildcard $(BPF_SRC_PATH)/*.h) | $(APP_OUTPUT)
 	$(call msg,BPF,$@)
 	$(CLANG) -g -O2 -target bpf -D__TARGET_ARCH_$(ARCH)		\
 			$(INCLUDES) -c $(filter %.c,$^) -o $@
