--- a/non-GPL/HostIsolation/KprobeConnectHook/Makefile
+++ b/non-GPL/HostIsolation/KprobeConnectHook/Makefile
@@ -1,14 +1,16 @@
 # SPDX-License-Identifier: (LGPL-2.1 OR BSD-2-Clause)
 LIBBPF_OUTPUT := $(abspath ../../../contrib/libbpf/build)
-LIBBPF_INCLUDE := $(abspath ../../contrib/libbpf/include/uapi)
+LIBBPF_UAPI_INCLUDE := $(abspath ../../../contrib/libbpf/include/uapi)
+LIBBPF_MAIN_INCLUDE := $(abspath ../../../contrib/libbpf/include)
 COMMON_DIR := $(abspath ../../Common)
 BPF_SRC_PATH := $(abspath ../../../GPL/HostIsolation/KprobeConnectHook)
 APP_OUTPUT := build
 CLANG ?= clang
 LIBBPF_SRC := $(abspath ../../../contrib/libbpf/src)
 LIBBPF_OBJ := $(abspath ../../../contrib/libbpf/build/libbpf.a)
-INCLUDES := -I$(LIBBPF_OUTPUT) -I$(LIBBPF_INCLUDE) -I$(COMMON_DIR)
+INCLUDES := -I$(LIBBPF_OUTPUT) -I$(LIBBPF_UAPI_INCLUDE) -I$(LIBBPF_MAIN_INCLUDE) -I$(COMMON_DIR)
 CFLAGS := -g -O2 -Wall
+LDFLAGS := -L$(abspath ../../../contrib/elftoolchain/build)
 ARCH := $(shell uname -m | sed 's/x86_64/x86/')
 
 APP = KprobeConnectHookDemo
@@ -35,7 +37,7 @@ $(APP_OUTPUT) $(LIBBPF_OUTPUT):
 
 $(APP_OUTPUT)/$(APP): %: %.o $(APP_OUTPUT)/KprobeLoader.o $(LIBBPF_OBJ) $(COMMON_DIR)/Common.o | $(APP_OUTPUT)
 	$(call msg,BINARY,$@)
-	$(CC) $(CFLAGS) $^ -lelf -lz -o $@
+	$(CC) $(CFLAGS) $(LDFLAGS) $^ -lelf -lz -o $@
 
 $(APP_OUTPUT)/%.o: %.c $(LIBBPF_OBJ) $(COMMON_DIR)/Common.o $(wildcard %.h) | $(APP_OUTPUT)
 	$(call msg,CC,$@)
