--- a/non-GPL/TcLoader/Makefile
+++ b/non-GPL/TcLoader/Makefile
@@ -1,13 +1,15 @@
 # SPDX-License-Identifier: (LGPL-2.1 OR BSD-2-Clause)
 LIBBPF_OUTPUT := $(abspath ../../contrib/libbpf/build)
-LIBBPF_INCLUDE := $(abspath ../../contrib/libbpf/include/uapi)
+LIBBPF_UAPI_INCLUDE := $(abspath ../../contrib/libbpf/include/uapi)
+LIBBPF_MAIN_INCLUDE := $(abspath ../../contrib/libbpf/include)
 COMMON_DIR := $(abspath ../Common)
 APP_OUTPUT := build
 CLANG ?= clang
 LIBBPF_SRC := $(abspath ../../contrib/libbpf/src)
 LIBBPF_OBJ := $(abspath ../../contrib/libbpf/build/libbpf.a)
-INCLUDES := -I$(LIBBPF_OUTPUT) -I$(LIBBPF_INCLUDE) -I$(COMMON_DIR)
+INCLUDES := -I$(LIBBPF_OUTPUT) -I$(LIBBPF_UAPI_INCLUDE) -I$(LIBBPF_MAIN_INCLUDE) -I$(COMMON_DIR)
 CFLAGS := -g -O2 -Wall
+LDFLAGS := -L$(abspath ../../contrib/elftoolchain/build)
 
 APPS = $(APP_OUTPUT)/TcLoaderDemo
 
@@ -33,7 +35,7 @@ $(APP_OUTPUT) $(LIBBPF_OUTPUT):
 
 $(APPS): %: %.o $(APP_OUTPUT)/TcLoader.o $(LIBBPF_OBJ) $(COMMON_DIR)/Common.o | $(APP_OUTPUT)
 	$(call msg,BINARY,$@)
-	$(CC) $(CFLAGS) $^ -lelf -lz -o $@
+	$(CC) $(CFLAGS) $(LDFLAGS) $^ -lelf -lz -o $@
 
 $(APP_OUTPUT)/%.o: %.c $(LIBBPF_OBJ) $(COMMON_DIR)/Common.o $(wildcard %.h) | $(APP_OUTPUT)
 	$(call msg,CC,$@)
