Add option to build eBPF as a static library without demos

--- a/non-GPL/TcLoader/Makefile
+++ b/non-GPL/TcLoader/Makefile
@@ -1,18 +1,22 @@
 # SPDX-License-Identifier: (LGPL-2.1 OR BSD-2-Clause)
 LIBBPF_OUTPUT := $(abspath ../../contrib/libbpf/build)
 LIBBPF_INCLUDE := $(abspath ../../contrib/libbpf/include/uapi)
-COMMON_INCLUDE := $(abspath ../Common)
+COMMON_DIR := $(abspath ../Common)
 APP_OUTPUT := build
 CLANG ?= clang
 LIBBPF_SRC := $(abspath ../../contrib/libbpf/src)
 LIBBPF_OBJ := $(abspath ../../contrib/libbpf/build/libbpf.a)
-INCLUDES := -I$(LIBBPF_OUTPUT) -I$(LIBBPF_INCLUDE) -I$(COMMON_INCLUDE)
+INCLUDES := -I$(LIBBPF_OUTPUT) -I$(LIBBPF_INCLUDE) -I$(COMMON_DIR)
 CFLAGS := -g -O2 -Wall
 
-APPS = $(APP_OUTPUT)/TcLoader
+APPS = $(APP_OUTPUT)/TcLoaderDemo
 
 .PHONY: all
+ifndef BUILD_STATIC_LIB
 all: $(APPS)
+else
+all: $(APP_OUTPUT)/TcLoader.o
+endif
 
 msg = @printf '  %-8s %s%s\n' "$(1)" "$(notdir $(2))" "$(if $(3), $(3))";
 MAKEFLAGS += --no-print-directory
@@ -26,14 +30,18 @@ $(APP_OUTPUT) $(LIBBPF_OUTPUT):
 	$(call msg,MKDIR,$@)
 	mkdir -p $@
 
-$(APPS): %: %.o $(LIBBPF_OBJ) | $(APP_OUTPUT)
+$(APPS): %: %.o $(APP_OUTPUT)/TcLoader.o $(LIBBPF_OBJ) $(COMMON_DIR)/Common.o | $(APP_OUTPUT)
 	$(call msg,BINARY,$@)
 	$(CC) $(CFLAGS) $^ -lelf -lz -o $@
 
-$(APP_OUTPUT)/%.o: %.c $(LIBBPF_OBJ) $(wildcard %.h) | $(APP_OUTPUT)
+$(APP_OUTPUT)/%.o: %.c $(LIBBPF_OBJ) $(COMMON_DIR)/Common.o $(wildcard %.h) | $(APP_OUTPUT)
 	$(call msg,CC,$@)
 	$(CC) $(CFLAGS) $(INCLUDES) -c $(filter %.c,$^) -o $@
 
+# Build eBPF common
+$(COMMON_DIR)/Common.o: $(COMMON_DIR)/Common.c $(COMMON_DIR)/Common.h $(LIBBPF_OBJ)
+	$(call msg,CC,$@)
+	$(CC) $(CFLAGS) $(INCLUDES) -c $(filter %.c,$^) -o $@
 
 # Build libbpf.a
 $(LIBBPF_OBJ): $(wildcard $(LIBBPF_SRC)/*.[ch]) | $(LIBBPF_OUTPUT)
