--- a/non-GPL/HostIsolation/KprobeConnectHook/Makefile
+++ b/non-GPL/HostIsolation/KprobeConnectHook/Makefile
@@ -1,20 +1,24 @@
 # SPDX-License-Identifier: (LGPL-2.1 OR BSD-2-Clause)
 LIBBPF_OUTPUT := $(abspath ../../../contrib/libbpf/build)
 LIBBPF_INCLUDE := $(abspath ../../contrib/libbpf/include/uapi)
-COMMON_INCLUDE := $(abspath ../../Common)
+COMMON_DIR := $(abspath ../../Common)
 BPF_SRC_PATH := $(abspath ../../../GPL/HostIsolation/KprobeConnectHook)
 APP_OUTPUT := build
 CLANG ?= clang
 LIBBPF_SRC := $(abspath ../../../contrib/libbpf/src)
 LIBBPF_OBJ := $(abspath ../../../contrib/libbpf/build/libbpf.a)
-INCLUDES := -I$(LIBBPF_OUTPUT) -I$(LIBBPF_INCLUDE) -I$(COMMON_INCLUDE)
+INCLUDES := -I$(LIBBPF_OUTPUT) -I$(LIBBPF_INCLUDE) -I$(COMMON_DIR)
 CFLAGS := -g -O2 -Wall
 ARCH := $(shell uname -m | sed 's/x86_64/x86/')
 
 APP = kprobe_connect_hook
 
 .PHONY: all
+ifndef BUILD_STATIC_LIB
 all: $(APP_OUTPUT)/$(APP) $(APP_OUTPUT)/kprobe_connect_hook.bpf.o
+else
+all: $(APP_OUTPUT)/kprobe_loader.o $(APP_OUTPUT)/kprobe_connect_hook.bpf.o
+endif
 
 msg = @printf '  %-8s %s%s\n' "$(1)" "$(notdir $(2))" "$(if $(3), $(3))";
 MAKEFLAGS += --no-print-directory
@@ -28,11 +32,11 @@ $(APP_OUTPUT) $(LIBBPF_OUTPUT):
 	$(call msg,MKDIR,$@)
 	mkdir -p $@
 
-$(APP_OUTPUT)/$(APP): %: %.o $(LIBBPF_OBJ) | $(APP_OUTPUT)
+$(APP_OUTPUT)/$(APP): %: %.o $(APP_OUTPUT)/kprobe_loader.o $(LIBBPF_OBJ) $(COMMON_DIR)/Common.o | $(APP_OUTPUT)
 	$(call msg,BINARY,$@)
 	$(CC) $(CFLAGS) $^ -lelf -lz -o $@
 
-$(APP_OUTPUT)/%.o: %.c $(LIBBPF_OBJ) $(wildcard %.h) | $(APP_OUTPUT)
+$(APP_OUTPUT)/%.o: %.c $(LIBBPF_OBJ) $(COMMON_DIR)/Common.o $(wildcard %.h) | $(APP_OUTPUT)
 	$(call msg,CC,$@)
 	$(CC) $(CFLAGS) $(INCLUDES) -c $(filter %.c,$^) -o $@
 
@@ -40,6 +44,11 @@ $(APP_OUTPUT)/$(APP).bpf.o: $(BPF_SRC_PATH)/$(APP).bpf.c $(LIBBPF_OBJ) $(wildcar
 	$(call msg,BPF,$@)
 	$(CLANG) -g -O2 -target bpf -D__TARGET_ARCH_$(ARCH)		\
 			$(INCLUDES) -c $(filter %.c,$^) -o $@
+
+# Build eBPF common
+$(COMMON_DIR)/Common.o: $(COMMON_DIR)/Common.c $(COMMON_DIR)/Common.h $(LIBBPF_OBJ)
+	$(call msg,CC,$@)
+	$(CC) $(CFLAGS) $(INCLUDES) -c $(filter %.c,$^) -o $@
 
 # Build libbpf.a
 $(LIBBPF_OBJ): $(wildcard $(LIBBPF_SRC)/*.[ch]) | $(LIBBPF_OUTPUT)
