Make macros for paths and add them to a new common header

--- a/non-GPL/TcLoader/Makefile
+++ b/non-GPL/TcLoader/Makefile
@@ -1,11 +1,12 @@
 # SPDX-License-Identifier: (LGPL-2.1 OR BSD-2-Clause)
 LIBBPF_OUTPUT := $(abspath ../../contrib/libbpf/build)
 LIBBPF_INCLUDE := $(abspath ../../contrib/libbpf/include/uapi)
+COMMON_INCLUDE := $(abspath ../Common)
 APP_OUTPUT := build
 CLANG ?= clang
 LIBBPF_SRC := $(abspath ../../contrib/libbpf/src)
 LIBBPF_OBJ := $(abspath ../../contrib/libbpf/build/libbpf.a)
-INCLUDES := -I$(LIBBPF_OUTPUT) -I$(LIBBPF_INCLUDE)
+INCLUDES := -I$(LIBBPF_OUTPUT) -I$(LIBBPF_INCLUDE) -I$(COMMON_INCLUDE)
 CFLAGS := -g -O2 -Wall
 
 APPS = $(APP_OUTPUT)/TcLoader
