Use camelcase for all file names

--- a/GPL/HostIsolation/TcFilter/Makefile
+++ b/GPL/HostIsolation/TcFilter/Makefile
@@ -1,5 +1,5 @@
 
-TcFilter.bpf.o: TcFilter.bpf.c $(wildcard %.h) kerneldefs.h
+TcFilter.bpf.o: TcFilter.bpf.c $(wildcard %.h) Kerneldefs.h
 	clang -g -O2 -I../../../contrib/kernel_hdrs -emit-llvm -c TcFilter.bpf.c -o - | llc -march=bpf -mcpu=v2 -filetype=obj -o TcFilter.bpf.o
 
 .PHONY: clean
