--- a/non-GPL/HostIsolationMapsUtil/CMakeLists.txt
+++ b/non-GPL/HostIsolationMapsUtil/CMakeLists.txt
@@ -7,17 +7,18 @@
 # Library
 add_library(UpdateMaps STATIC UpdateMaps.c)
 target_include_directories(UpdateMaps PRIVATE 
-    "${LIBBPF_TARGET_DIR}"
+    "${LIBBPF_INCLUDE_DIR}"
     "${PROJECT_SOURCE_DIR}/non-GPL/Common")
 
 target_link_libraries(UpdateMaps Common ${LIBBPF_LIB} ${LIBELF_LIB} -lz)
+add_dependencies(UpdateMaps Common libbpf libelf)
 
 install(FILES UpdateMaps.h DESTINATION ${TARGET_INCLUDE_DIR})
 
 # Demo using the library
 add_executable(UpdateIPsDemo UpdateIPsDemo.c)
 target_include_directories(UpdateIPsDemo PRIVATE 
-    "${LIBBPF_TARGET_DIR}"
+    "${LIBBPF_INCLUDE_DIR}"
     "${PROJECT_SOURCE_DIR}/non-GPL/Common")
 
 target_link_libraries(UpdateIPsDemo UpdateMaps)
