Allow targets to be used as a subdirectory

--- a/GPL/HostIsolation/KprobeConnectHook/CMakeLists.txt
+++ b/GPL/HostIsolation/KprobeConnectHook/CMakeLists.txt
@@ -13,10 +13,10 @@ set(KPROBECONNECTHOOK_CFLAGS
                         -target bpf
                         -D__TARGET_ARCH_${ARCH_TRUNC}
                         -D__${ARCH}__
+                        -I${LIBBPF_TARGET_INCLUDE_DIR}
+                        -I${LIBBPF_UAPI_INCLUDE_DIR}
                         -I${LIBBPF_INCLUDE_DIR}
-                        -I${CMAKE_SOURCE_DIR}/non-GPL/Common/
-                        -I${CMAKE_SOURCE_DIR}/contrib/libbpf/include
-                        -I${CMAKE_SOURCE_DIR}/contrib/libbpf/include/uapi)
+                        -I${CMAKE_SOURCE_DIR}/non-GPL/Common)
 
 add_custom_command(OUTPUT KprobeConnectHook.bpf.o
                   COMMAND ${CLANG} ${KPROBECONNECTHOOK_CFLAGS} -c ${CMAKE_CURRENT_SOURCE_DIR}/KprobeConnectHook.bpf.c -o KprobeConnectHook.bpf.o
