--- a/non-GPL/Common/CMakeLists.txt
+++ b/non-GPL/Common/CMakeLists.txt
@@ -5,7 +5,7 @@
 # you may not use this file except in compliance with the Elastic License 2.0.
 
 add_library(Common STATIC Common.c)
-target_include_directories(Common PRIVATE "${LIBBPF_INCLUDE_DIR}")
+target_include_directories(Common PRIVATE "${LIBBPF_TARGET_INCLUDE_DIR}" "${LIBBPF_UAPI_INCLUDE_DIR}" "${LIBBPF_INCLUDE_DIR}")
 add_dependencies(Common libbpf)
 
 set_target_properties(Common PROPERTIES PUBLIC_HEADER Common.h)
