Jenkins build for different architectures

--- a/GPL/HostIsolation/TcFilter/CMakeLists.txt
+++ b/GPL/HostIsolation/TcFilter/CMakeLists.txt
@@ -39,7 +39,8 @@ set(TCFILTER_CFLAGS
 set(TCFILTER_BPF_OUTPUT ${TARGET_EBPF_DIR}/TcFilter.bpf.o)
 add_custom_command(OUTPUT ${TCFILTER_BPF_OUTPUT}
                   COMMAND ${CLANG} ${TCFILTER_CFLAGS} -emit-llvm -c ${CMAKE_CURRENT_SOURCE_DIR}/TcFilter.bpf.c -o - | ${LLC} -march=bpf -mcpu=v2 -filetype=obj -o  ${TCFILTER_BPF_OUTPUT}
-                  COMMENT "Building  ${TCFILTER_BPF_OUTPUT}")
+                  COMMENT "Building  ${TCFILTER_BPF_OUTPUT}"
+                  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/TcFilter.bpf.c)
 
 add_custom_target(BPFTcFilter ALL DEPENDS  ${TCFILTER_BPF_OUTPUT})
 
@@ -59,4 +60,3 @@ add_dependencies(BPFTcFilterTests BPFTcFilter)
 target_link_libraries(BPFTcFilterTests ${LIBBPF_LIB} ${LIBELF_LIB} ${GTEST_LIB} -pthread -lz)
 add_dependencies(BPFTcFilterTests libbpf libelf gtest)
 
-#RENZONE configure_file(BPFTcFilterTests ${TARGET_TEST_DIR} COPYONLY)
