test structure for Files and vmlinux generation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,9 @@ file(MAKE_DIRECTORY ${TARGET_TEST_DIR})
 include(ExternalProject)
 include(libelf)
 include(libbpf)
-include(GenerateVmlinux)
+include(BPF)
+include(arch)
+include(GoogleTest)
 
 add_subdirectory(GPL/HostIsolation/KprobeConnectHook)
 add_subdirectory(GPL/HostIsolation/TcFilter)
